--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
-<META http-equiv="refresh" content="0;URL=http://staff.polito.it/giovanni.squillero/">
+<!DOCTYPE HTML>
+<html lang="en">
+	<head>
+        <meta charset="UTF-8" />
+
+<!--#include file="_copyright.html" -->
+
+        <title>Giovanni Squillero's Crash Page</title>
+        <meta name="author" content="Yeuch!" />
+        <meta name="description" content="Giovanni Squillero's Crash Page" />
+
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+
+<!--#include file="_scripts.html" -->
+
+	</head>
+	<body>
+
+		<!-- Header -->
+			<section id="header">
+<!--#include file="_header.html" -->
+				<nav id="nav">
+					<ul>
+                        <li><a href="index.html">Contact info</a></li>
+                        <li><a href="cv.html">Curriculum vit&aelig;</a></li>
+						<li><a href="dida.php">Didactics</a></li>
+					</ul>
+				</nav>
+			</section>
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Main -->
+					<div id="main">
+						<div class="container">
+							<header class="major">
+								<h2>Moved Permanently!</h2>
+                                <a class="hidden" href="images/lucca2012.jpg"><img style="width: 100%; margin-right: .1em; border: solid 1px; border-color: Maroon;" src="images/lucca2012.jpg" alt="Squillero meets the Avengers (2012)" /></a>
+                            </header>
+                                <h2><a style="color: maroon; margin: auto;" href="http://staff.polito.it/giovanni.squillero/">http://staff.polito.it/giovanni.squillero/</a></h2>
+							</header>
+						</div>
+
+<!--#include file="_footer.html" -->
+
+			</div>
+        </div>
+
+		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollzer.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+		<script src="assets/js/main.js"></script>
+	</body>
+</html>
