--- a/index.html
+++ b/index.html
@@ -1,62 +1,120 @@
+
 <!DOCTYPE HTML>
 <html lang="en">
-	<head>
+    <head>
         <meta charset="UTF-8" />
 
-<!--#include file="_copyright.html" -->
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<!--               |                                                       -->
+<!--    #####      |   (c) 1993-2016 by Giovanni Squillero                 -->
+<!--   ######      |   email: giovanni@squillero@polito.it                 -->
+<!--   ###   \     |   smail: Politecnico di Torino - DAUIN                -->
+<!--    ##G  c\    |          Cso Duca degli Abruzzi 24                    -->
+<!--    #     _\   |          10123 TORINO - ITALY                         -->
+<!--    |   _/     |   tel: +39-0115647186 / fax: +39-0115647099           -->
+<!--    |  _/      |   www: http://staff.polito.it/giovanni.squillero/     -->
+<!--               |                                                       -->
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<!-- Layout based on the wonderful "Read Only" by HTML5 UP <html5up.net>   -->
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<!--                                  (!)                                  -->
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
 
         <title>Giovanni Squillero's Crash Page</title>
         <meta name="author" content="Yeuch!" />
         <meta name="description" content="Giovanni Squillero's Crash Page" />
 
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+        <link rel="stylesheet" href="assets/css/main.css" />
+        <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
-<!--#include file="_scripts.html" -->
+<!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
+<script type="text/javascript" src="http://gc.kis.v2.scr.kaspersky-labs.com/757C63CE-AD55-9C4D-A2E0-BDC78BE68A4C/main.js" charset="UTF-8"></script><link rel="stylesheet" crossorigin="anonymous" href="http://gc.kis.v2.scr.kaspersky-labs.com/C4A86EB87CDB-0E2A-D4C9-55DA-EC36C757/abn/main.css"/><script type="text/javascript">
+    window.cookieconsent_options = {"message":"Beware: I use cookies to analyze traffic, and I share these information with Google analytics","dismiss":"Got it!","learnMore":"(More info)","link":"https://support.google.com/analytics/topic/2919631?hl=en","theme":"light-bottom"};
+</script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.9/cookieconsent.min.js"></script>
+<!-- End Cookie Consent plugin -->
 
-	</head>
-	<body>
+<!-- Google analytics -->
+<script type="text/javascript"> 
+  var _gaq = _gaq || []; 
+  _gaq.push(['_setAccount', 'UA-28094298-4']); 
+  _gaq.push(['_trackPageview']); 
 
-		<!-- Header -->
-			<section id="header">
-<!--#include file="_header.html" -->
-				<nav id="nav">
-					<ul>
+  (function() { 
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; 
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; 
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); 
+  })(); 
+</script>
+
+
+    </head>
+    <body>
+
+        <!-- Header -->
+            <section id="header">
+<header>
+<pre style="font-weight: bold; font-family: monospace; line-height: 1.1em; font-size: x-small;">/-------------\
+|   #####     |
+|  ######     |
+|  ###   \    |
+|   ##G  c\   |
+|   #     _\  |
+|   |   _/    |
+|   |  _/     |
+\-------------/
+</pre>
+    <h1 id="logo"><a href="http://staff.polito.it/giovanni.squillero/">Giovanni Squillero</a></h1>
+</header>
+
+                <nav id="nav">
+                    <ul>
                         <li><a href="index.html">Contact info</a></li>
                         <li><a href="cv.html">Curriculum vit&aelig;</a></li>
-						<li><a href="dida.php">Didactics</a></li>
-					</ul>
-				</nav>
-			</section>
+                        <li><a href="dida.php">Didactics</a></li>
+                    </ul>
+                </nav>
+            </section>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+        <!-- Wrapper -->
+            <div id="wrapper">
 
-				<!-- Main -->
-					<div id="main">
-						<div class="container">
-							<header class="major">
-								<h2>Moved Permanently!</h2>
+                <!-- Main -->
+                    <div id="main">
+                        <div class="container">
+                            <header class="major">
+                                <h2>Moved Permanently!</h2>
                                 <a class="hidden" href="images/lucca2012.jpg"><img style="width: 100%; margin-right: .1em; border: solid 1px; border-color: Maroon;" src="images/lucca2012.jpg" alt="Squillero meets the Avengers (2012)" /></a>
                             </header>
                                 <h2><a style="color: maroon; margin: auto;" href="http://staff.polito.it/giovanni.squillero/">http://staff.polito.it/giovanni.squillero/</a></h2>
-							</header>
-						</div>
+                            </header>
+                        </div>
 
-<!--#include file="_footer.html" -->
+<section id="footer">
+    <div style="padding: 1em 0 0 0;" class="container">
+        <ul class="copyright">
 
-			</div>
+        <li>&copy; 1993-2016&nbsp;by&nbsp;Giovanni&nbsp;Squillero &lt;<a href="mailto:giovanni.squillero@polito.it">giovanni.squillero@polito.it</a>&gt;.
+        &nbsp;
+        Unless otherwise noted, all material is licensed under <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC&nbsp;BY-SA&nbsp;4.0</a>.</li>
+        </ul>
+    </div>
+</section>
+
+
+            </div>
         </div>
 
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.scrollzer.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/skel.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-		<script src="assets/js/main.js"></script>
-	</body>
+        <!-- Scripts -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/jquery.scrollzer.min.js"></script>
+        <script src="assets/js/jquery.scrolly.min.js"></script>
+        <script src="assets/js/skel.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+        <script src="assets/js/main.js"></script>
+    </body>
 </html>
