--- a/index.html
+++ b/index.html
@@ -59,25 +59,11 @@
                     <div id="main">
                         <div class="container">
                             <header class="major">
-                                <h2>Moved Permanently!</h2>
-                                <a class="hidden" href="images/lucca2012.jpg"><img style="width: 100%; margin-right: .1em; border: solid 1px; border-color: Maroon;" src="images/lucca2012.jpg" alt="Squillero meets the Avengers (2012)" /></a>
+                                <h2>Moved Permanently to <a style="color: maroon; margin: auto;" href="http://staff.polito.it/giovanni.squillero/">http://staff.polito.it/giovanni.squillero/</a></h2>
+                                <a class="hidden" href="http://staff.polito.it/giovanni.squillero/"><img style="width: 100%; margin-right: .1em; border: solid 1px; border-color: Maroon;" src="images/lucca2012.jpg" alt="Squillero meets the Avengers (2012)" /></a>
                             </header>
-                                <h2><a style="color: maroon; margin: auto;" href="http://staff.polito.it/giovanni.squillero/">http://staff.polito.it/giovanni.squillero/</a></h2>
                             </header>
                         </div>
-
-<section id="footer">
-    <div style="padding: 1em 0 0 0;" class="container">
-        <ul class="copyright">
-
-        <li>&copy; 1993-2016&nbsp;by&nbsp;Giovanni&nbsp;Squillero &lt;<a href="mailto:giovanni.squillero@polito.it">giovanni.squillero@polito.it</a>&gt;.
-        &nbsp;
-        Unless otherwise noted, all material is licensed under <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC&nbsp;BY-SA&nbsp;4.0</a>.</li>
-        </ul>
-    </div>
-</section>
-
-
             </div>
         </div>
 
