--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div id="main">
                         <div class="container">
                             <header class="major">
-                                <h2>Moved Permanently to <a style="color: maroon; margin: auto;" href="http://staff.polito.it/giovanni.squillero/">http://staff.polito.it/giovanni.squillero/</a></h2>
+                                <h2>Moved to <a style="color: maroon; margin: auto;" href="http://staff.polito.it/giovanni.squillero/">http://staff.polito.it/giovanni.squillero/</a></h2>
                                 <a class="hidden" href="http://staff.polito.it/giovanni.squillero/"><img style="width: 100%; margin-right: .1em; border: solid 1px; border-color: Maroon;" src="images/lucca2012.jpg" alt="Squillero meets the Avengers (2012)" /></a>
                             </header>
                             </header>
