--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META http-equiv="refresh" content="0;URL=http://staff.polito.it/giovanni.squillero/">
+<META http-equiv="refresh" content="0;URL=https://staff.polito.it/giovanni.squillero/">
