--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<META http-equiv="refresh" content="0;URL=https://staff.polito.it/giovanni.squillero/">
+<a rel="me" href="https://sigmoid.social/@squillero">Mastodon</a>
+<meta http-equiv="refresh" content="0;URL=https://staff.polito.it/giovanni.squillero/">
